--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Tests js</title>
 </head>
 <body>
-    <script src="index.js"></script>
-     <script src="app.js"></script>
+<!--    <script src="index.js"></script>-->
+<!--     <script src="app.js"></script>-->
+<script src="string.js"></script>
 </body>
 </html>
