--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <!--    <script src="index.js"></script>-->
 <!--     <script src="app.js"></script>-->
-<script src="string.js"></script>
+<!--<script src="string.js"></script>-->
+<script src="functions.js"></script>
 </body>
 </html>
