--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <!--    <script src="index.js"></script>-->
 <!--     <script src="app.js"></script>-->
 <!--<script src="string.js"></script>-->
-<script src="functions.js"></script>
+<!--<script src="functions.js"></script>-->
+<script src="array.js"></script>
 </body>
 </html>
