--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <!--     <script src="app.js"></script>-->
 <!--<script src="string.js"></script>-->
 <!--<script src="functions.js"></script>-->
-<script src="array.js"></script>
+<!--<script src="array.js"></script>-->
+<script src="object.js"></script>
 </body>
 </html>
