--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!--<script src="string.js"></script>-->
 <!--<script src="functions.js"></script>-->
 <!--<script src="array.js"></script>-->
-<script src="object.js"></script>
+<!--<script src="object.js"></script>-->
+<script src="asynchrony.js"></script>
 </body>
 </html>
