--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <title>Tests js</title>
 </head>
 <body>
+<h1 id="hello">Hello world</h1>
+<h2 id="sub-hello" class="h2-class">This is heading 2</h2>
+<h2>Another h2</h2>
 <!--    <script src="index.js"></script>-->
 <!--     <script src="app.js"></script>-->
 <!--<script src="string.js"></script>-->
 <!--<script src="functions.js"></script>-->
 <!--<script src="array.js"></script>-->
 <!--<script src="object.js"></script>-->
-<script src="asynchrony.js"></script>
+<!--<script src="asynchrony.js"></script>-->
+<script src="dom.js"></script>
 </body>
 </html>
