--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1 id="hello">Hello world</h1>
 <h2 id="sub-hello" class="h2-class">This is heading 2</h2>
 <h2>Another h2</h2>
+
 <!--    <script src="index.js"></script>-->
 <!--     <script src="app.js"></script>-->
 <!--<script src="string.js"></script>-->
@@ -15,6 +16,7 @@
 <!--<script src="array.js"></script>-->
 <!--<script src="object.js"></script>-->
 <!--<script src="asynchrony.js"></script>-->
-<script src="dom.js"></script>
+<!--<script src="dom.js"></script>-->
+<script src="check.js"></script>
 </body>
 </html>
